# prefligit

./: .gitignore  .pre-commit-config.yaml  .python-version  BENCHMARK.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  DIFF.md  LICENSE  Makefile  README.md  build.rs  clippy.toml  dist-workspace.toml  pyproject.toml  typos.toml
.claude/: settings.local.json
.config/: nextest.toml
.devcontainer/: devcontainer.json
.github/: renovate.json  renovate.json5
.github/workflows/: build-binaries.yml  ci.yml  publish.yml  release.yml  setup-dev-drive.ps1
lib/constants/: Cargo.toml
lib/constants/src/: env_vars.rs  lib.rs
scripts/: release.sh
src/: archive.rs  cleanup.rs  config.rs  env_vars.rs  fs.rs  git.rs  hook.rs  identify.rs  lib.rs  main.rs  printer.rs  process.rs  profiler.rs  run.rs  store.rs  version.rs  warnings.rs  workspace.rs
src/builtin/: meta_hooks.rs  mod.rs  pre_commit_hooks.rs
src/builtin/pre_commit_hooks/: check_added_large_files.rs  fix_end_of_file.rs  fix_trailing_whitespace.rs  mod.rs
src/cli/: clean.rs  hook_impl.rs  install.rs  mod.rs  reporter.rs  run.rs  sample_config.rs  self_update.rs  validate.rs
src/cli/run/: filter.rs  keeper.rs  mod.rs  run.rs
src/languages/: docker.rs  docker_image.rs  fail.rs  mod.rs  node.rs  pygrep.rs  python.rs  script.rs  system.rs  version.rs
src/languages/golang/: golang.rs  installer.rs  mod.rs  version.rs
src/languages/node/: installer.rs  mod.rs  node.rs  version.rs
src/languages/python/: impl.rs  mod.rs  python.rs  uv.rs  version.rs
src/snapshots/: pre_commit_rs__config__tests__read_config.snap  pre_commit_rs__config__tests__read_manifest.snap  prefligit__config__tests__read_config.snap  prefligit__config__tests__read_manifest.snap  prek__config__tests__read_config.snap
tests/: builtin_hooks.rs  clean.rs  hook_impl.rs  install.rs  language.rs  meta_hooks.rs  run.rs  sample_config.rs  validate.rs
tests/common/: mod.rs
tests/data/: uv-pre-commit-config.yaml
tests/fixtures/: go.yaml  issue227.yaml  issue265.yaml  node-dependencies.yaml  node-hooks.yaml  node-version.yaml  python-version.yaml  repeated-repos.yaml
tests/fixtures/issue253/: biome.json  input.json  issue253.yaml
tests/languages/: docker.rs  docker_image.rs  fail.rs  golang.rs  main.rs  node.rs  pygrep.rs  python.rs  script.rs  unimplemented.rs
